创建BorderTextView项目，完成初始化工作

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':asynctaskdemo', ':handlerdemo', ':passwordviewdemo', ':layoutweightdemo', ':scrollsticklayoutdemo'
+include ':asynctaskdemo', ':handlerdemo', ':passwordviewdemo', ':layoutweightdemo', ':scrollsticklayoutdemo', ':bordertextview'
 include ':mvpdemo'
